Fix search functionality on mobile
Also edit blog card css

--- a/styles/blog.module.css
+++ b/styles/blog.module.css
@@ -8,6 +8,7 @@
 .search {
   border: 1px solid #666;
   box-sizing: border-box;
+  cursor: 'pointer';
   font-size: 1.3rem;
   margin-bottom: 1rem;
   padding: 0.9rem;
@@ -32,7 +33,7 @@
   margin: 0.5rem;
   position: static;
   transition: 250ms all ease-in-out;
-  width: 45%;
+  width: 400px;
 }
 
 .card:hover {
